--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -2043,16 +2043,16 @@
  origin.10.b.desc:0 "[Root.GetSpeciesNamePlural]. The first phase of the experiment has successfully concluded - we have guided you towards the development of your civilization's first hyperdrives, and you are now ready to take to the stars.\n\nRest assured in the knowledge that we will continue to monitor your progress now that the second phase has begun. Thus far, you have proven remarkably adroit. Not at all like the others.\n\nIt will be interesting to see what you make of this opportunity."
  origin.10.b:0 "We will not fail you."
  casus_belli_cb_scion:0 "ไซออน"
- war_goal_wg_scion:0 "นำไปปิดผนึก"
- war_goal_wg_scion_desc:0 "War is waged to vassalize the enemy under our Fallen Empire overlord.\n\n\n\nIn the event of a Status Quo peace, systems we occupy will be released as a new Vassal of our overlord if they include at least one planet."
+ war_goal_wg_scion:0 "ยินดีต้อนรับเข้าสู่ร่มเงาจักรวรรดิฟอลเล็น"
+ war_goal_wg_scion_desc:0 "สงครามเพื่อกำจัดศัตรูให้อยู่ภายใต้การปกครองของจักรวรรดิฟอลเล็น เจ้าเหนือหัวของเรา\n\n\n\nเมื่อสงครามยุติ ระบบดาวที่เราครอบครองจะได้รับการปลดปล่อยในฐานะบริวารใหม่ของเจ้าเหนือหัวของเรา หากระบบดาวเหล่านั้นมีดาวเคราะห์อย่างน้อยหนึ่งดวง"
  casus_belli_cb_hegemon:0 "การใช้อำนาจครอบงำ"
  war_goal_wg_hegemon:0 "สร้างสหพันธ์มหาอำนาจ"
- war_goal_wg_hegemon_desc:0 "War is waged to force the enemy to become a member of our Hegemony.\n\n\n\nIn the event of a Status Quo peace, systems we occupy will be released as a new member of our Hegemony if they include at least one planet."
+ war_goal_wg_hegemon_desc:0 "สงครามเพื่อบังคับให้ศัตรูเข้ามาเป็นสมาชิกสหพันธ์มหาอำนาจของเรา\n\n\n\nเมื่อสงครามยุติ ระบบดาวที่เราครอบครองจะได้รับการปลดปล่อยในฐานะสมาชิกใหม่ของสหพันธ์มหาอำนาจของเรา หากระบบดาวเหล่านั้นมีดาวเคราะห์อย่างน้อยหนึ่งดวง"
  casus_belli_cb_secession:0 "แยกตัวออก"
  war_goal_wg_leave_hegemony:0 "ออกจากสหพันธ์มหาอำนาจ"
- war_goal_wg_leave_hegemony_desc:0 "War is waged to secede from the Hegemony. Other federation members who share this war goal can be invited as attackers."
+ war_goal_wg_leave_hegemony_desc:0 "สงครามเพื่อแยกตัวออกจากสหพันธ์มหาอำนาจ สมาชิกสหพันธ์อื่นๆที่มีเป้าหมายร่วมกันในสงครามนี้ สามารถถูกเชิญให้เป็นผู้โจมตีได้"
  war_goal_wg_assert_hegemony:0 "พิทักษ์รักษาความเป็นสหพันธ์มหาอำนาจ"
- war_goal_wg_assert_hegemony_desc:0 "War is waged to prevent a member of the Hegemony from seceding."
+ war_goal_wg_assert_hegemony_desc:0 "สงครามเพื่อป้องกันไม่ให้สมาชิกสหพันธ์มหาอำนาจ ทำการแยกตัวออกจากสหพันธ์"
  wg_leave_hegemony_accept:0 "§Y[Root.GetName]§! secedes from the §Y[From.GetAllianceName]§!\n§Y[From.GetName]§! revokes all claims on §Y[Root.GetAdj]§! systems."
  wg_leave_hegemony_status_quo:0 "§Y[Root.GetName]§! secedes from the §Y[From.GetAllianceName]§!"
  wg_assert_hegemony_accept:0 "§Y[From.GetName]§! remains a member of the §Y[Root.GetAllianceName]§!"
