--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -91,7 +91,7 @@
  EMPIRE_SIZE_FROM_BRANCH_OFFICES:0 "จาก $NUM|Y$ $OFFICE_OFFICES$: $VALUE$"
  EMPIRE_SIZE_FROM_POPS:1 "จาก $NUM|Y$ $POP_POPS$: $VALUE$"
  EMPIRE_SIZE_EFFECTS:5 "จาก §Y$EMPIRE_SIZE$§! ในปัจจุบัน เรามีความเปลี่ยนแปลงดังต่อไปนี้:"
- EMPIRE_SIZE_NO_EFFECTS:4 "เมื่อ §Y$EMPIRE_SIZE$§! มีค่าต่ำกว่าหรือเท่ากับ §Y100§! จะไม่มีค่าใช้จ่ายอื่นๆเพิ่มเติม"
+ EMPIRE_SIZE_NO_EFFECTS:5 "เมื่อ §Y$EMPIRE_SIZE$§! มีค่าต่ำกว่าหรือเท่ากับ $VALUEBASE|0Y$ จะไม่มีค่าใช้จ่ายอื่นๆเพิ่มเติม §Y$EMPIRE_SIZE$§! มีค่าขั้นต่ำอยู่ที่ $VALUEFLOOR|0Y$"
  EMPIRE_SIZE_ADDITIONAL_EFFECTS:0 "§Eเอฟเฟกต์เพิ่มเติม:§!"
  EMPIRE_SIZE_EFFECTS_TECH:3 "ค่าใช้จ่ายของเทคโนโลยี: §Y+$VALUE|%0$§!"
  EMPIRE_SIZE_EFFECTS_TRADITIONS:3 "ค่าใช้จ่ายในการปรับใช้วัฒนธรรม: §Y+$VALUE|%0$§!"
@@ -3678,10 +3678,10 @@
  triggered_opinion_of_interstellar_assembly_4:0 "สมัชชาระหว่างดวงดาว"
  casus_belli_cb_galatron:1 "Galatron Access Denied"
  war_goal_wg_take_galatron:0 "ยึดครองกาลาตรอน"
- war_goal_wg_take_galatron_desc:0 "To bathe in the glory of the Galatron is the right of all sapient beings. A civilization that would close its borders to others is not a fit steward of the Galatron."
+ war_goal_wg_take_galatron_desc:0 "การมีวัตถุโบราณ 'กาลาตรอน' เป็นสิทธิของผู้มีปัญญาทั้งหลาย อารยธรรมที่จะปิดพรมแดนกับผู้อื่นนั้นไม่เหมาะสมกับ 'กาลาตรอน'"
  casus_belli_cb_expel_corp:0 "การเวนคืน"
  war_goal_wg_expel_corp:0 "ขับไล่คอร์ปอเรชั่น"
- war_goal_wg_expel_corp_desc:0 "War is waged to close down the corporation's branch offices and expropriate their properties on our planets."
+ war_goal_wg_expel_corp_desc:0 "สงครามเพื่อปิดสำนักงานสาขาของบริษัทและเวนคืนทรัพย์สินของพวกเขามาที่ดาวของเรา"
  wg_expel_corp_status_quo_effects:1 "All Branch Offices owned by the §Y[From.GetName]§! in the §Y[Root.GetName]§! are closed.\n§Y[From.GetName]§! receives £energy£ §Y1000§! for each closed Branch Office."
  wg_expel_corp_effects:2 "All Branch Offices owned by the §Y[From.GetName]§! in the §Y[Root.GetName]§! are closed.\n§Y[Root.GetName]§! receives £energy£ §Y1000§! for each closed Branch Office."
  wg_seize_branch_office_effects:1 "§Y[Root.GetName]§! takes control of the planetary Branch Office\n"
@@ -3690,8 +3690,8 @@
  market_founding_chain_title:0 "ก่อตั้งตลาดกาแล็กติก"
  market_founding_chain_desc:0 "The establishment of an international commercial forum is nigh, and whoever controls the centralized exchange station stands to benefit.\n\nShould we desire to compete for the title of market host, we have a few years to use §HDecisions§! to nominate one of our worlds to tether the $galactic_market_station$."
  casus_belli_cb_steal_galatron:1 "อ้างสิทธิ์ในกาลาตรอน"
- war_goal_wg_steal_galatron:0 "ยึดกาลาตรอน"
- war_goal_wg_steal_galatron_desc:0 "Possession of the Galatron is paramount to our ascendance. We will not rest until the Galatron blesses our empire with its eternal presence, liberated from less worthy appendages."
+ war_goal_wg_steal_galatron:0 "ขโมยกาลาตรอน"
+ war_goal_wg_steal_galatron_desc:0 "การครอบครองวัตถุโบราณ 'กาลาตรอน' นั้นมีความสำคัญยิ่งต่อการเลื่อนขั้นของเรา"
  MANDATE_mandate_monthly_energy:0 "เศรษฐกิจพลังงาน"
  MANDATE_mandate_monthly_energy_DESC:1 "[Root.GetRulerTitle] [Root.GetRulerName] was elected on a platform of bringing our monthly £energy£§YEnergy Credits§! surplus up to at least £energy£§Y+20§!/month.\n\n§EReward at end of term:§!\n$mandate_unity_reward$"
  MANDATE_mandate_monthly_minerals:1 "การกลั่นสกัดแร่"
@@ -4200,7 +4200,7 @@
  DEVASTATION:0 "การทำลายล้าง"
  AVAILABLE_JOBS:0 "£job£ ตำแหน่งงานที่ว่าง: $COUNT|Y$"
  mod_country_cost_mult:0 "ค่าใช้จ่ายทั้งหมด"
- mod_resolutions_cost_mult:0 "Galcom Resolution Action Costs"
+ mod_resolutions_cost_mult:0 "ค่าใช้จ่ายในการดำเนินการญัตติในสภาประชาคมกาแล็กติก"
  nanites_deficit:0 "Nanite Deficit"
  nanites_deficit_tooltip:0 "A lack of Nanites halts Nanite Transmutation."
  sr_living_metal_deficit:1 "Living Metal Deficit"
