--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -281,7 +281,7 @@
  MOD_SHIP_WEAPON_RANGE_MULT:1 "ระยะการยิงของยาน"
  MOD_SHIP_ENGAGEMENT_RANGE_MULT:0 "ระยะการโจมตีของยาน"
  MOD_SHIP_FIRE_RATE_MULT:1 "อัตราความเร็วการยิงของยาน"
- MOD_FORCE_DISPARITY_FIRE_RATE_MULT:0 "Force Disparity Combat Bonus"
+ MOD_FORCE_DISPARITY_FIRE_RATE_MULT:0 "โบนัสการรบจากความแตกต่างของกำลัง"
  MOD_SHIP_HOME_TERRITORY_FIRE_RATE_MULT:0 "อัตราการยิงในพื้นที่จักรวรรดิบ้านเกิด"
  MOD_SHIP_COMBAT_SPEED_MULT:2 "ความเร็วในการต่อสู้"
  MOD_SHIP_DISENGAGE_CHANCE_MULT:0 "โอกาสหลุดรอดจากการต่อสู้"
@@ -311,8 +311,8 @@
  MOD_SHIP_NAVAL_CAP_USAGE_MULT:0 "$MOD_SHIP_NAVAL_CAP_USAGE_ADD$"
  MOD_SHIP_REPAIR_HULL_MULT:0 "ความเร็วในการซ่อมตัวยานที่จอดเทียบท่า"
  MOD_SHIP_REPAIR_ARMOR_MULT:0 "ความเร็วในการซ่อมเกราะของยานที่จอดเทียบท่า"
- MOD_SHIP_CLOAKING_STRENGTH_ADD:0 "Cloaking Strength"
- MOD_SHIP_CLOAKING_DETECTION_ADD:0 "Detection Strength"
+ MOD_SHIP_CLOAKING_STRENGTH_ADD:0 "พลังพรางตัว"
+ MOD_SHIP_CLOAKING_DETECTION_ADD:0 "พลังตรวจจับ"
  MOD_OWNED_SHIP_SPEED_MULT:0 "$MOD_SHIP_SPEED_MULT$"
  MOD_OWNED_SHIP_EVASION_MULT:0 "$MOD_SHIP_EVASION_MULT$"
  MOD_OWNED_SHIP_FIRE_RATE_MULT:0 "$MOD_SHIP_FIRE_RATE_MULT$"
@@ -353,7 +353,7 @@
  MOD_PLANET_AMENITIES_NO_HAPPINESS_MULT:0 "$MOD_PLANET_AMENITIES_ADD$"
  MOD_TRADE_VALUE_ADD:0 "มูลค่าการค้า"
  MOD_TRADE_VALUE_MULT:0 "$MOD_TRADE_VALUE_ADD$"
- MOD_BRANCH_OFFICE_CRIMINAL_SYNDICATE_VALUE_ADD:1 "Criminal Branch Office Trade Value"
+ MOD_BRANCH_OFFICE_CRIMINAL_SYNDICATE_VALUE_ADD:1 "มูลค่าการค้าของสำนักงานสาขาอาชญากร"
  MOD_PIRACY_GROWTH_MULT:0 "การปล้นจากสลัดอวกาศเพิ่ม"
  MOD_SHIP_PIRACY_SUPPRESSION_ADD:0 "การปราบปรามสลัดอวกาศ"
  MOD_SHIP_PIRACY_SUPPRESSION_MULT:0 "$MOD_SHIP_PIRACY_SUPPRESSION_ADD$"
@@ -484,7 +484,7 @@
  MOD_LEADER_GENERAL_COST:0 "ค่าจ้างพลเอก"
  MOD_LEADER_SCIENTIST_COST:0 "ค่าจ้างนักวิทยาศาสตร์"
  MOD_LEADER_GOVERNOR_COST:0 "ค่าจ้างผู้ว่าการ"
- MOD_LEADER_SPECIES_EXP_GAIN:0 "ผู้นำได้รับค่าประสบการณ์"
+ MOD_LEADER_SPECIES_EXP_GAIN:0 "ได้ค่าประสบการณ์ของผู้นำ"
  MOD_LEADER_COUNCILOR_EXP_GAIN:0 "เพิ่มประสบการณ์ที่ปรึกษา"
  MOD_COUNTRY_LEADER_CAP_ADD:0 "จำนวนความจุของผู้นำ"
  skill_governor_homeplanet:0 "ปกครองดาวเคราะห์บ้านเกิด"
@@ -593,12 +593,12 @@
  mod_country_base_sr_dark_matter_produces_add:0 "£sr_dark_matter£ สสารมืดต่อเดือน"
  mod_country_base_sr_zro_produces_add:0 "£sr_zro£ แร่ซีโร รายเดือน"
  mod_country_monuments_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
- mod_country_suppression_influence_upkeep_add:0 "Influence Upkeep"
- mod_country_promotion_influence_upkeep_add:0 "Influence Upkeep"
+ mod_country_suppression_influence_upkeep_add:0 "การบำรุงรักษาอิทธิพล"
+ mod_country_promotion_influence_upkeep_add:0 "การบำรุงรักษาอิทธิพล"
  mod_country_ambition_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
  mod_country_federation_perks_unity_produces_add:0 "£unity£ เอกภาพต่อเดือน"
  mod_country_civics_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
- mod_country_civics_influence_upkeep_add:0 "Influence Upkeep"
+ mod_country_civics_influence_upkeep_add:0 "การบำรุงรักษาอิทธิพล"
  mod_country_ai_uprising_energy_produces_add:0 "£energy£ เครดิตพลังงานรายเดือน"
  mod_country_ai_uprising_minerals_produces_add:0 "£minerals£ แร่รายเดือน"
  mod_country_covenant_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
@@ -880,7 +880,7 @@
  ship_max_damaged_effect:0 "โทษที่ได้รับจากความเสียหาย"
  station_self_repair:0 "ซ่อมแซมตัวเอง"
  jump_drive_cooldown:1 "เวลาคูลดาวน์การขับเคลื่อนแบบกระโดดข้าม (จั้มไดร์ฟ)"
- cloaking_cooldown:0 "Cloaking Cooldown"
+ cloaking_cooldown:0 "เวลาคูลดาวน์การพรางตัว"
  pop_base:0 "ฐาน"
  pop_base_with_happiness:0 "$pop_base$"
  hostile_environment:0 "สภาพแวดล้อมที่ไม่เป็นมิตร"
@@ -1063,7 +1063,7 @@
  opinion_defensive_pact:0 "สนธิสัญญาป้องกันตนเอง"
  opinion_broke_alliance:0 "ยกเลิกสนธิสัญญาพันธมิตร"
  opinion_broke_defensive_pact:0 "ยกเลิกสนธิสัญญาป้องกันตนเอง"
- opinion_broke_research_agreement:0 "Broke Research Agreement"
+ opinion_broke_research_agreement:0 "ยกเลิกข้อตกลงการวิจัย"
  opinion_broke_non_aggression_pact:0 "ทำลายสนธิสัญญาไม่รุกราน"
  opinion_broke_commercial_pact:0 "ยกเลิกสนธิสัญญาการค้า"
  opinion_broke_migration_pact:0 "ทำลายสนธิสัญญาการย้ายถิ่นฐาน"
@@ -1126,7 +1126,7 @@
  opinion_broke_away:0 "Breakaway State"
  opinion_broke_away_from:0 "Former Oppressors"
  opinion_primitive_violation:1 "Annexed pre-FTLs"
- opinion_fallen_empire_gift:0 "Given Gift"
+ opinion_fallen_empire_gift:0 "ให้ของขวัญ"
  opinion_put_in_their_place:0 "Put in their place"
  opinion_accepted_fallen_empire_demand:0 "ยอมรับความต้องการ"
  opinion_refused_fallen_empire_demand:0 "ความต้องการถูกปฏิเสธ"
