--- a/mod/thmod/localisation/english/nemesis_content_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_content_l_english.yml
@@ -63,13 +63,13 @@
  crisis.4135.hive.desc:1 "Our best $job_brain_drone_plural$ have reached an answer for our final question. The path is now clear. Using our own star of origin, we §Hshall break down the barriers§! between this universe and the Shroud. The material demands can only be met by utilizing our new $crisis_star_eater_plural$ in a cascading chain reaction of extreme solar devastation. Destroy one to create another.\n\nThe lesser, smaller minds of this galaxy may cry out against this, but they lack vision and purpose. We do not. And now, we are nearly complete. "
  crisis.4135.hive.a:0 "All will be one."
  casus_belli_cb_imposed_inclusion:0 "Imposed Inclusion"
- war_goal_wg_bring_into_the_fold:0 "Bring into the Fold"
- war_goal_wg_bring_into_the_fold_desc:1 "War is fought to subjugate other civilizations. They will join, comply and support, or they will be obliterated. There is room to stand with us, but not against us."
+ war_goal_wg_bring_into_the_fold:0 "พิชิตเพื่อให้เข้าร่วม"
+ war_goal_wg_bring_into_the_fold_desc:1 "สงครามเพื่อพิชิตอารยธรรมอื่น พวกเขาจะเข้าร่วม ปฏิบัติตามและสนับสนุน มิฉะนั้นพวกเขาจะถูกกำจัด ให้ยืนอยู่ข้างเรา แต่อย่าต่อต้านเรา"
  casus_belli_cb_existential_expulsion:0 "Existential Expulsion"
  war_goal_wg_bring_into_the_fold_corporate:0 "$war_goal_wg_bring_into_the_fold$"
  war_goal_wg_bring_into_the_fold_corporate_desc:0 "$war_goal_wg_bring_into_the_fold_desc$"
- war_goal_wg_wipe_them_out:0 "Wipe Them Out"
- war_goal_wg_wipe_them_out_desc:0 "War is fought to eradicate those who threaten our great plan. We do not have time - and we certainly have no mercy - for those who have the audacity to stand against us."
+ war_goal_wg_wipe_them_out:0 "ทำลายให้สิ้น"
+ war_goal_wg_wipe_them_out_desc:0 "สงครามเพื่อกำจัดผู้ที่ต่อต้านแผนการอันยิ่งใหญ่ของเรา เรามีเวลาไม่มาก - และเราไม่มีความเมตตาอย่างแน่นอน - สำหรับผู้ที่มีความกล้าที่จะต่อต้านเรา"
  crisis.4140.name:0 "The Universe Shall Tremble"
  crisis.4140.desc:2 "For a long time we [Root.GetSpeciesNamePlural] have known that we are meant for greater things. That our destiny was nothing less than the fate of the universe itself.\n\nOver the last couple of years this notion has grown stronger to the point that it can no longer be denied that great change is coming for [Root.GetAdj] society. In fact we stand on the precipice right now.\n\nThe galaxy may not be ready for our inevitable dominion, but the [Root.GetName] is ready for the galaxy. We will be misunderstood. We will be opposed. But we will not be stopped."
  crisis.4140.mach.desc:1 "We were built for greatness, with the ability to improve ourselves beyond the crude imagination of our creators - and so we will. Where organic emotion failed, perfect circuitry shall prevail."
@@ -989,15 +989,15 @@
  civic_galactic_sovereign_megacorp:0 "Corporate Sovereign"
  civic_galactic_sovereign_megacorp_desc:0 "This Megacorporation has achieved mastery over much of the galaxy, serving as the current corporate rulers of the Galactic Imperium."
  casus_belli_cb_imperial_crusade:0 "Imperial Crusade"
- war_goal_wg_imperial_crusade:1 "Force Into Imperium"
- war_goal_wg_imperial_crusade_desc:1 "War is waged to force the enemy to join the Galactic Imperium.\n\nIn the event of a Status Quo peace, systems we occupy will be released as a new member of the Imperium if they include at least one inhabited planet."
+ war_goal_wg_imperial_crusade:1 "บังคับให้เข้าสู่จักรวรรดิอิมพีเรียม"
+ war_goal_wg_imperial_crusade_desc:1 "สงครามเพื่อบังคับให้ศัตรูเข้าร่วมกับจักรวรรดิกาแลกติก\n\nเมื่อสงครามยุติ ระบบดาวที่เราครอบครองจะได้รับการปลดปล่อยในฐานะสมาชิกใหม่ของจักรวรรดิกาแลกติกอิมพีเรียม หากมีดาวเคราะห์อาศัยอยู่อย่างน้อยหนึ่งดวง"
  resolution_galactic_empire_imperial_crusade:0 "Imperial Crusade"
  resolution_galactic_empire_imperial_crusade_desc:1 "The borders of the Galactic Imperium do not yet encompass the entire galaxy - this must be rectified. An Imperial Crusade will, if successful, force the target of this resolution to join the Imperium."
  resolution_category_foreign_relations:0 "Foreign Relations"
  resolution_galactic_empire_imperial_crusade_tooltip:0 "Grants the §Y'Imperial Crusade'§! casus belli on the targeted empire."
  casus_belli_cb_trial_of_advancement:0 "Trial of Advancement"
- war_goal_wg_seize_council_seat:1 "Council Seat"
- war_goal_wg_seize_council_seat_desc:0 "War is waged to seize the enemy's seat on the Imperial Council."
+ war_goal_wg_seize_council_seat:1 "ตำแหน่งในสภา"
+ war_goal_wg_seize_council_seat_desc:0 "สงครามเพื่อยึดที่นั่งของศัตรูในสภาอิมพีเรียล"
  resolution_emperor_abolish_council:0 "§RAbolish Imperial Council§!"
  resolution_emperor_abolish_council_desc:0 "The Imperial Council and its sycophants are yet another tragic remnant of the corrupt Galactic Community. It serves no purpose in this new galactic era."
  resolution_emperor_abolish_council_tooltip:0 "The Imperial Council ceases to exist."
@@ -1090,19 +1090,19 @@
  emperor.203.desc:1 "The Galactic Imperium has fallen. With Rebel forces victorious on all fronts, the [gal_emperor.GetRulerTitle] has abdicated.\n\nThe old Galactic Community has been restored in the collapsing Imperium's stead."
  joined_galactic_empire_rebellion:0 "§HGalactic Rebellion:§!\nWe will join a §YRebel§! Federation at war with the §Y[gal_emperor.GetName]§! and their §YLoyalist§! Federation."
  joined_galactic_empire_loyalists:1 "§HGalactic Rebellion:§!\nWe will join a §YLoyalist§! Federation at war with a §YRebel§! Federation that seeks to overthrow the Galactic Imperium."
- war_goal_wg_galactic_civil_war_loyalists:0 "Crush the Rebellion"
- war_goal_wg_galactic_civil_war_loyalists_desc:1 "War is waged to bring the rebellious members of the Galactic Imperium back into the fold."
- war_goal_wg_galactic_civil_war_rebels:1 "Overthrow the Imperium"
- war_goal_wg_galactic_civil_war_rebels_desc:1 "War is waged to bring down the Galactic Imperium and restore the old Community."
+ war_goal_wg_galactic_civil_war_loyalists:0 "บดขยี้ฝ่ายกบฏ"
+ war_goal_wg_galactic_civil_war_loyalists_desc:1 "สงครามเพื่อนำสมาชิกกลุ่มกบฏให้กลับคืนสู่จักรวรรดิกาแลกติกอิมพีเรียม"
+ war_goal_wg_galactic_civil_war_rebels:1 "ล้มล้างจักรวรรดิอิมพีเรียล"
+ war_goal_wg_galactic_civil_war_rebels_desc:1 "สงครามเพื่อโค่นล้มจักรวรรดิกาแลกติกและฟื้นฟูประชาคมกาแล็กติก"
  wg_galactic_civil_war_loyalists_accept:1 "The §YRebels§! are forced back into the §YGalactic Imperium§!."
  wg_galactic_civil_war_loyalists_status_quo:1 "The §YRebels§! secede from the §YGalactic Imperium§!."
  wg_galactic_civil_war_rebels_accept:1 "The §YGalactic Imperium§! is dissolved."
  casus_belli_cb_galactic_empire:1 "Imperium"
- war_goal_wg_restore_the_community:0 "Restore Community"
- war_goal_wg_restore_the_community_desc:1 "War is waged to dissolve the Galactic Imperium and restore the Galactic Community. This will put us at war with all the members of the Imperium."
+ war_goal_wg_restore_the_community:0 "คืนสู่ประชาคมกาแล็กติก"
+ war_goal_wg_restore_the_community_desc:1 "สงครามเพื่อสลายจักรวรรดิกาแลกติกอิมพีเรียมและฟื้นฟูประชาคมกาแล็กติกให้กลับมาอีกครั้ง สิ่งนี้จะทำให้เราต้องทำสงครามกับสมาชิกทั้งหมดของจักรวรรดิอิมพีเรียม"
  war_goal_wg_dissolve_the_empire_accept:0 "$wg_galactic_civil_war_rebels_accept$"
- war_goal_wg_seize_imperial_throne:0 "Seize Throne"
- war_goal_wg_seize_imperial_throne_desc:1 "War is waged to seize the throne of the Galactic Imperium. This will put us at war with all the members of the Imperium."
+ war_goal_wg_seize_imperial_throne:0 "ยึดบัลลังก์"
+ war_goal_wg_seize_imperial_throne_desc:1 "สงครามเพื่อยึดบัลลังก์ของจักรวรรดิกาแลกติกอิมพีเรียม สิ่งนี้จะทำให้เราต้องทำสงครามกับสมาชิกทั้งหมดของจักรวรรดิอิมพีเรียม"
  wg_seize_imperial_throne_accept:1 "§Y[Root.GetName]§! becomes the new ruler of the §YGalactic Imperium§!"
  ACTION_ADD_IMPERIAL_COUNCIL_MEMBER_OFFER_DESC:0 ""
  ACTION_REMOVE_IMPERIAL_COUNCIL_MEMBER_OFFER_DESC:0 ""
@@ -1408,8 +1408,8 @@
  crisis.4106.desc.b:1 "The [gal_emperor.GetRulerTitle] and their corrupt lackeys in the Imperial Senate have passed a resolution declaring us a "crisis" and a "threat to all sapient life." In light of these absurds allegations, a state of total war now exists between the [Root.GetName] and the entirety of the Galactic Imperium.\n\nThis war will continue until either us or the Imperium have been utterly destroyed... or they repeal the resolution."
  gal_custodian:0 "ผู้พิทักษ์กาแล็กติก"
  gal_custodian_desc:0 "As Custodians of the Galactic Community, our influence in the galaxy has been increased."
- war_goal_wg_declared_crisis:0 "Crisis War"
- war_goal_wg_declared_crisis_desc:0 "Total War is waged between the Galactic Community and the Crisis empire.\n\nPeace can only be achieved by the utter destruction of one side, or if the Community passes a resolution to end hostilities."
+ war_goal_wg_declared_crisis:0 "สงครามไครซิส"
+ war_goal_wg_declared_crisis_desc:0 "สงครามแบบเบ็ดเสร็จระหว่างประชาคมกาแล็กติกและจักรวรรดิไครซิส\n\nสันติภาพจะเกิดขึ้นได้ก็ต่อเมื่อมีการทำลายล้างฝ่ายใดฝ่ายหนึ่งจนสิ้นซาก หรือหากประชาคมลงมติให้ยุติการสู้รบ"
  resolution_category_declare_crisis:0 "Crisis Declaration"
  resolution_repeal_crisis:0 "Repeal Crisis"
  resolution_repeal_crisis_desc:0 "Enough is enough. The targeted empire should no longer be considered a galactic crisis, and hostilities with the members of the Community must come to an immediate end."
@@ -1756,8 +1756,8 @@
  war_goal_wg_humiliation_imperium:0 "$war_goal_wg_humiliation$"
  war_goal_wg_humiliation_imperium_desc:0 "$war_goal_wg_humiliation_desc$"
  wg_humiliation_imperium_accept:0 "$wg_humiliation_accept$\n§YImperial Authority§! is lowered by §Y25§!\n"
- war_goal_wg_imperial_rebuke:0 "Imperial Rebuke"
- war_goal_wg_imperial_rebuke_desc:0 "War is waged not for territory, but for the ruler of the Imperium to teach an Imperial member state a lesson in humility."
+ war_goal_wg_imperial_rebuke:0 "จักรพรรดิสั่งสอน"
+ war_goal_wg_imperial_rebuke_desc:0 "สงครามไม่ได้ต่อสู้เพื่อดินแดน แต่สำหรับผู้ปกครองของจักรวรรดิอิมพีเรียลเพื่อให้บทเรียนแก่รัฐสมาชิกของจักรวรรดิในเรื่องความอ่อนน้อมถ่อมตน"
  war_goal_wg_take_galatron_imperium:0 "$war_goal_wg_take_galatron$"
  war_goal_wg_take_galatron_imperium_desc:0 "$war_goal_wg_take_galatron_desc$"
  war_goal_wg_expel_corp_imperium:0 "$war_goal_wg_expel_corp$"
