--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -1019,8 +1019,8 @@
  leader_trait_surgical_bombardment_desc:0 "This leader can identify valuable military targets with ease."
  leader_trait_wrecker:0 "Wrecker"
  leader_trait_wrecker_desc:1 "This leader is not concerned with leaving enemy ships in a salvageable state for research, preferring to vaporize them if possible."
- leader_trait_corsair:1 "Material Liberator"
- leader_trait_corsair_effect:2 "$FLEET_EFFECTS_TXT$:\n$t$Every Enemy Empire Ship Destroyed:\n$tt$$r_energy$: §G+$@trait_corsair_amt$§!"
+ leader_trait_corsair:1 "โจรสลัด"
+ leader_trait_corsair_effect:2 "$FLEET_EFFECTS_TXT$:\n$t$ยานของจักรวรรดิศัตรูทุกลำถูกทำลาย:\n$tt$$r_energy$: §G+$@trait_corsair_amt$§!"
  leader_trait_corsair_desc:1 "This leader is dedicated to collecting any useful items from defeated enemy ships."
  leader_trait_corsair_2:0 "$leader_trait_corsair$ II"
  leader_trait_corsair_2_effect:2 "$FLEET_EFFECTS_TXT$:\n$t$Every Enemy Empire Ship Destroyed:\n$tt$$r_energy$: §G+$@trait_corsair_2_amt$§!"
@@ -1442,7 +1442,7 @@
  minerals_with_texticon:0 "£minerals£ §Y$minerals$§!"
  energy_with_texticon:0 "£energy£ §Y$energy$§!"
  food_with_texticon:0 "£food£ §Y$food$§!"
- building_paragon_memory_vaults:0 "Vaults of Knowledge"
+ building_paragon_memory_vaults:0 "ห้องนิรภัยสำหรับเก็บความรู้"
  building_paragon_memory_vaults_machine:0 "$building_paragon_memory_vaults$"
  building_paragon_memory_vaults_hive:0 "$building_paragon_memory_vaults$"
  building_paragon_memory_vaults_desc:1 "Our society has always preserved the stories of heroes and prominent figures from the past. Their knowledge and experiences are digitized and gathered in the Vaults of Knowledge. Destroying this building will eradicate the data stored inside."
@@ -1450,47 +1450,47 @@
  building_paragon_memory_vaults_hive_desc:1 "The memories and sense impressions of every autonomous drone is stored in the Vaults of Knowledge, waiting to be imprinted in the minds of fresh drones. Destroying this building will eradicate the data stored inside."
  building_corporate_clinics:0 "Corporate Clinic"
  building_corporate_clinics_desc:1 "A private medical company employing local and off-world medical specialists to provide services for a reasonable fee."
- building_corporate_clinics_effect:1 "$r_amenities$ from £job_healthcare£ §Y$job_healthcare_plural$§!: §G+1§!\n$r_trade_value$ from £job_healthcare£ §Y$job_healthcare_plural$§!: §G+2§!"
- civic_tooltip_memory_vault_effects:0 "§YLeaders§! start at Level §G+1§!\nCan build unique £building£ §Y$building_paragon_memory_vaults$§!\n£building£§Y$building_paragon_memory_vaults$§! produce $r_unity$ and increase §Y$MOD_LEADER_SPECIES_EXP_GAIN$§! based on §YDestiny Traits§! acquired."
- civic_memory_vault:0 "Vaults of Knowledge"
+ building_corporate_clinics_effect:1 "$r_amenities$ จาก £job_healthcare£ §Y$job_healthcare_plural$§!: §G+1§!\n$r_trade_value$ จาก £job_healthcare£ §Y$job_healthcare_plural$§!: §G+2§!"
+ civic_tooltip_memory_vault_effects:0 "§Yผู้นำ§! มีเลเวลเริ่มต้น §G+1§!\nสามารถสร้าง £building£ §Y$building_paragon_memory_vaults$§!\n£building£§Y$building_paragon_memory_vaults$§! ผลิต $r_unity$ และเพิ่ม §Y$MOD_LEADER_SPECIES_EXP_GAIN$§! ขึ้นอยู่กับการมี §Yคุณลักษณะที่เกี่ยวกับโชคชะตา§!"
+ civic_memory_vault:0 "ห้องนิรภัยสำหรับเก็บความรู้"
  civic_memory_vault_desc:1 "The knowledge, principles, and experiences of exceptional people are digitized and accumulated in the Vaults of Knowledge. Citizens can access this source of wisdom and experience to learn from the ghosts of the past."
- civic_tooltip_memory_vault_corporate_effects:0 "§YLeaders§! start at Level §G+1§!\nCan build unique £building£§Y $building_paragon_memory_vaults$§!\n£building£§Y$building_paragon_memory_vaults$§! produce $r_unity$ and $r_trade_value$ based on §YDestiny Traits§! acquired."
- civic_memory_vault_corporate:1 "Knowledge Mentorship"
+ civic_tooltip_memory_vault_corporate_effects:0 "§Yผู้นำ§! มีเลเวลเริ่มต้น §G+1§!\nสามารถสร้าง £building£§Y $building_paragon_memory_vaults$§!\n£building£§Y$building_paragon_memory_vaults$§! ผลิต $r_unity$ และ $r_trade_value$ ขึ้นอยู่กับการมี §Yคุณลักษณะที่เกี่ยวกับโชคชะตา§!"
+ civic_memory_vault_corporate:1 "คลังเก็บความรู้"
  civic_memory_vault_corporate_desc:1 "The knowledge, principles, and experiences of exceptional people are digitized and accumulated in the Vaults of Knowledge. Citizens can access this source of wisdom and experience to learn from the ghosts of the past. For a price, of course."
- civic_tooltip_memory_vault_machine_effects:0 "§YLeaders§! start at Level §G+1§!\nCan build unique £building£ §Y$building_paragon_memory_vaults$§!\n£building£§Y$building_paragon_memory_vaults$§! produce $r_unity$ and increase §Y$MOD_LEADER_SPECIES_EXP_GAIN$§! based on §YLeaders§! who acquired §YLevel 8§!."
- civic_memory_vault_machine:1 "Experience Cache"
+ civic_tooltip_memory_vault_machine_effects:0 "§Yผู้นำ§! มีเลเวลเริ่มต้น §G+1§!\nสามารถสร้าง £building£ §Y$building_paragon_memory_vaults$§!\n£building£§Y$building_paragon_memory_vaults$§! ผลิต $r_unity$ และเพิ่ม §Y$MOD_LEADER_SPECIES_EXP_GAIN$§! ขึ้นอยู่กับ §Yผู้นำ§! ที่มี §Yเลเวล 8§!"
+ civic_memory_vault_machine:1 "แคชเก็บข้อมูลประสบการณ์"
  civic_memory_vault_machine_desc:0 "This machine intelligence was developed with the goal of digitizing and storing data and experiences in order to analyze, learn from, and use it for its own improvement."
- civic_tooltip_memory_vault_hive_effects:2 "§YLeaders§! start at Level §G+1§!\nCan build unique £building£§Y $building_paragon_memory_vaults$§!\n£building£ §Y$building_paragon_memory_vaults$§! produce $r_unity$ and increase §Y$MOD_LEADER_SPECIES_EXP_GAIN$§! based on §YLeaders§! who acquired §YLevel 8§!."
- civic_memory_vault_hive:1 "Neural Vaults"
+ civic_tooltip_memory_vault_hive_effects:2 "§Yผู้นำ§! มีเลเวลเริ่มต้น §G+1§!\nสามารถสร้าง £building£§Y $building_paragon_memory_vaults$§!\n£building£ §Y$building_paragon_memory_vaults$§! ผลิต $r_unity$ และเพิ่ม §Y$MOD_LEADER_SPECIES_EXP_GAIN$§! ขึ้นอยู่กับ §Yผู้นำ§! ที่มี §Yเลเวล 8§!"
+ civic_memory_vault_hive:1 "ห้องนิรภัยระบบประสาท"
  civic_memory_vault_hive_desc:0 "This hive is focused on introspection and learning from the lives of autonomous drones in the galaxy. It extracts memories through the storage and dissolution of brain tissue, through which it can implement partial memories into a freshly prepared drone."
- civic_tooltip_crusader_spirit_effects:1 "§YAdmirals§! start with the §Y$leader_trait_par_zealot$§! trait\n§YGenerals§! start with the §Y$leader_trait_crusader$§! trait\nCan only use §YLiberation Wars§! policy"
- civic_crusader_spirit:0 "Crusader Spirit"
+ civic_tooltip_crusader_spirit_effects:1 "§Yพลเรือเอก§! มีคุณลักษณะ §Y$leader_trait_par_zealot$§! ตั้งแต่แรก\n§Yพลเอก§! มีคุณลักษณะ §Y$leader_trait_crusader$§! ตั้งแต่แรก\nใช้ได้เฉพาะนโยบาย §Yสงครามปลดปล่อย§! เท่านั้น"
+ civic_crusader_spirit:0 "จิตวิญญาณครูเซเดอร์"
  civic_crusader_spirit_desc:0 "The lack of guidance creates weak minds - which easily succumb to corruption and plunge into decadence. This society has assumed the self-imposed mantle of bringing "enlightenment" to the masses through aggressive proselytizing."
- civic_tooltip_crusader_spirit_corporate_effects:2 "§YAdmirals§! start with the §Y$leader_trait_corsair$§! trait\nHas the '§Y$casus_belli_cb_pirate_raid$§!' casus belli on all other empires"
- civic_crusader_spirit_corporate:0 "Letters of Marque"
+ civic_tooltip_crusader_spirit_corporate_effects:2 "§Yพลเรือเอก§! มีคุณลักษณะ §Y$leader_trait_corsair$§! ตั้งแต่แรก\nมีเหตุผลทำสงคราม '§Y$casus_belli_cb_pirate_raid$§!' กับจักรวรรดิอื่นๆทั้งหมด"
+ civic_crusader_spirit_corporate:0 "สารตรา (ใบอนุญาตปล้น)"
  civic_crusader_spirit_corporate_desc:0 "To combat space piracy and safeguard its borders, this megacorporation utilizes notorious pirates as military advisors and admirals for their fleets."
- casus_belli_cb_pirate_raid:0 "Pirate Raid"
+ casus_belli_cb_pirate_raid:0 "การจู่โจมของโจรสลัด"
  gov_pirate_haven:0 "Pirate Haven"
  gov_pirate_haven_desc:0 "$gov_criminal_syndicate_desc$"
  war_goal_wg_plunder_raid:0 "$war_goal_wg_plunder$"
  war_goal_wg_plunder_raid_desc:0 "War is waged to raid and pillage the enemy. Using this wargoal will plunder $r_energy$ and $r_minerals$ from the target."
- civic_task_delegation_corporate:1 "Precision Cogs"
+ civic_task_delegation_corporate:1 "ฟันเฟืองที่ถูกต้องและแม่นยำ"
  civic_task_delegation_corporate_desc:1 "This megacorporation operates on a highly optimized and robust system of delegation. Such an approach means that a given task is always performed by the most qualified worker."
- civic_private_healthcare_corporate:1 "Pharma State"
+ civic_private_healthcare_corporate:1 "รัฐยาและเภสัชกรรม"
  civic_private_healthcare_corporate_desc:1 "A strong nation is a healthy nation. This megacorporation maintains a robust economy through experimental drugs, highly privatized clinics, and aggressive marketing campaigns."
- civic_tooltip_civic_private_healthcare_corporate_effects:2 "$r_amenities$ from £job_healthcare£ §Y$job_healthcare_plural$§!: §G+2§!\n$r_trade_value$ from £job_healthcare£ §Y$job_healthcare_plural$§!: §G+4§!\nCan build £building£ §Y$building_corporate_clinics$§! $BRANCH_OFFICE_BUILDING$"
- civic_machine_upkeep_twister:1 "Sovereign Circuits"
+ civic_tooltip_civic_private_healthcare_corporate_effects:2 "$r_amenities$ จาก £job_healthcare£ §Y$job_healthcare_plural$§!: §G+2§!\n$r_trade_value$ จาก £job_healthcare£ §Y$job_healthcare_plural$§!: §G+4§!\nสามารถสร้าง £building£ §Y$building_corporate_clinics$§! $BRANCH_OFFICE_BUILDING$ ได้"
+ civic_machine_upkeep_twister:1 "วงจรผู้ปกครองสูงสุด"
  civic_machine_upkeep_twister_desc:1 "Units produced by this machine intelligence come equipped with autonomous decision-making software. More efficient and effective than older models, these units nevertheless require greater power input."
- civic_tooltip_machine_upkeep_twister_effects:2 "Change §Y1§! Base $r_unity$ Leader Upkeep to §Y2§! $r_energy$"
- civic_hive_upkeep_twister:0 "Autonomous Drones"
+ civic_tooltip_machine_upkeep_twister_effects:2 "เปลี่ยนค่าบำรุงรักษาผู้นำจากเดิม §Y1§! $r_unity$ เป็น §Y2§! $r_energy$ แทน"
+ civic_hive_upkeep_twister:0 "โดรนอัตโนมัติ"
  civic_hive_upkeep_twister_desc:1 "The hypermetabolic drones evolved in this colony possess increased autonomy. While decision-making and situation assessment are enhanced, these drones require an increased intake of digestible materials."
- civic_tooltip_hive_upkeep_twister_effects:1 "Change §Y1§! Base $r_unity$ Leader Upkeep to §Y2§! $r_minerals$ or $r_food$"
- civic_heroic_tales:0 "Heroic Past"
+ civic_tooltip_hive_upkeep_twister_effects:1 "เปลี่ยนค่าบำรุงรักษาผู้นำจากเดิม §Y1§! $r_unity$ เป็น §Y2§! $r_minerals$ หรือ $r_food$ แทน"
+ civic_heroic_tales:0 "วีรบุรุษในตำนาน"
  civic_heroic_tales_desc:1 "The legendary heroes of the past inspire this civilizations young people to achieve the extraordinary. As role models, government officials are expected to embody these ideals."
  civic_heroic_tales_effects:0 "$tr_aptitude_adopt_desc$"
- civic_dystopian_society:1 "Oppressive Autocracy"
+ civic_dystopian_society:1 "ระบอบเผด็จการกดขี่"
  civic_dystopian_society_desc:1 "Only the elite of the elite deserve the best of the best. Everyone else is expected to provide for the ruling class and their lackeys."
- civic_tooltip_dystopian_society_effects:1 "Force §Y$living_standard_dystopian_society$§! Living Standard, under which §Ynon-Ruler§! Jobs have decreased $r_consumer_goods$ Upkeep\nOnly §YRuler§! Jobs and  £job_enforcer£ $job_enforcer_plural$ have $r_amenities$ Upkeep\nMost £pop£ Pops generate §Y1§! additional £crime£ §Y$PLANET_CRIME_TITLE$§!\nOnly §YRuler§! Jobs can produce $r_amenities$\nForbids £building£ §Y$building_holo_theatres$§!"
+ civic_tooltip_dystopian_society_effects:1 "- บังคับให้มีมาตรฐานความเป็นอยู่แบบ §Y$living_standard_dystopian_society$§! โดยที่งานที่ §Yไม่ใช่ผู้ปกครอง§! จะมีค่าบำรุงรักษาที่เป็น $r_consumer_goods$ ลดลง\n- งาน §Yผู้ปกครอง§! และ £job_enforcer£ $job_enforcer_plural$ เท่านั้น ที่มีค่าบำรุงรักษาที่เป็น $r_amenities$\n- £pop£ ประชากรส่วนใหญ่จะสร้าง £crime£ §Y$PLANET_CRIME_TITLE$§! เพิ่มขึ้นอีก §Y1§! \n- งาน §Yผู้ปกครอง§! เท่านั้นที่สามารถผลิต $r_amenities$ ได้\n- ห้ามสร้าง £building£ §Y$building_holo_theatres$§!"
  district_hab_cultural_dystopian_desc:0 "These districts provide enforcers with some well-deserved relief and entertainment."
  NAME_legendary_crash_site:0 "Dugar"
  NAME_Vapob:0 "Vapob"
