--- a/mod/thmod/localisation/english/paragon_4_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_4_l_english.yml
@@ -756,9 +756,9 @@
  leader_trait_adventurous_spirit_hive_desc:1 "Bred with an unusually high degree of autonomy, this drone is capable of making spontaneous and independent decisions."
  leader_trait_adventurous_spirit_machine:0 "Unrestrained Unit"
  leader_trait_adventurous_spirit_machine_desc:1 "This unit is programmed with a special degree of autonomy."
- leader_trait_resilient_hive:1 "Resilience"
+ leader_trait_resilient_hive:1 "ยืดหยุ่น"
  leader_trait_resilient_hive_desc:1 "This drone is notably resilient."
- leader_trait_resilient_machine:1 "Resilience"
+ leader_trait_resilient_machine:1 "ยืดหยุ่น"
  leader_trait_resilient_machine_desc:1 "This unit was designed to be resilient."
  leader_trait_resilient_2_hive:1 "$leader_trait_resilient_hive$ II"
  leader_trait_resilient_2_hive_desc:1 "$leader_trait_resilient_hive_desc$"
