--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -780,7 +780,7 @@
  allow_gaia:0 "ทำให้เราสามารถปรับสภาพดาวให้เป็น §Yดาวเคราะห์ไกอา§! ได้"
  no_rev_engineering:1 "ปฏิบัติการ §Y$operation_steal_technology$§! จะล้มเหลวโดยอัตโนมัติเมื่อใช้กับพวกเราและจักรวรรดิอื่นจะไม่สามารถนำ §Yเศษซากยานรบของเรา§! ที่ถูกทำลาย ไปศึกษาวิจัยได้"
  allow_raiding:0 "ปลดล็อกการทิ้งระเบิดแบบ §Y$bombardment_raiding$§! ซึ่งจะช่วยให้เราสามารถลักพาตัวประชากรจากดาวเคราะห์ที่ถูกปิดล้อมและย้ายประชากรมาที่โลกของเรา"
- ap_defender_of_the_galaxy_effect_opinion:1 "£opinion£ §Yทัศนคติ§! ของทุกจักรวรรดิเพิ่มขึ้น §G+200§!"
+ ap_defender_of_the_galaxy_effect_opinion:2 "เพิ่ม £opinion£ §Yทัศนคติ§! ของจักรวรรดิที่สามารถทำกิจกรรมการฑูตแบบปกติได้ §G+200§!"
  ap_defender_of_the_galaxy_modifier_desc:0 "สร้างความเสียหายให้กับฝ่ายไครซิสตอนจบเกม : §G+50%§!"
  ap_engineered_evolution:0 "วิวัฒนาการทางพันธุวิศวกรรม"
  ap_the_flesh_is_weak:0 "ร่างกายเป็นสิ่งที่อ่อนแอ"
