--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -840,12 +840,12 @@
  r_consumer_goods:1 "£consumer_goods£ §Y$consumer_goods$§!"
  r_unity:1 "£unity£ §Y$unity$§!"
  r_influence:1 "£influence£ §Y$influence$§!"
- r_research:1 "£physics£ £society£ £engineering£ §YResearch Points§!"
+ r_research:1 "§Yแต้มการวิจัย§! £physics£ £society£ £engineering£"
  r_physics:0 "£physics£ §Yการวิจัยฟิสิกส์§!"
  r_society:0 "£society£ §Yการวิจัยสังคม§!"
  r_engineering:0 "£engineering£ §Yการวิจัยวิศวกรรม§!"
  r_amenities:1 "£amenities£ §Yความอยู่ดีกินดี§!"
- r_trade_value:1 "£trade_value£ §YTrade Value§!"
+ r_trade_value:1 "£trade_value£ §Yมูลค่าการค้า§!"
  r_loyalty:1 "£loyalty£ §Yความภักดีต่อเดือน§!"
  r_rare_crystals:1 "£rare_crystals£ §Y$rare_crystals$§!"
  r_volatile_motes:1 "£volatile_motes£ §Y$volatile_motes$§!"
@@ -1184,9 +1184,9 @@
  ove_requires_tech_power_hub_2:0 "$overlord_has_technology$ £physics£ §Y$tech_power_hub_2$§!"
  ove_requires_tech_food_processing_2:1 "$overlord_has_technology$ £society£ §Y$tech_food_processing_2$§!"
  casus_belli_cb_allegiance:0 "Secret Fealty From Subject"
- war_goal_wg_allegiance:0 "Allegiance War"
+ war_goal_wg_allegiance:0 "สงครามความจงรักภักดี"
  war_goal_wg_allegiance_desc:0 "Wage war to wrestle control of subjects that have pledged allegiance to us."
- war_goal_wg_defend_allegiance:0 "Maintain Servitude"
+ war_goal_wg_defend_allegiance:0 "สงครามความไม่จงรักภักดี"
  war_goal_wg_defend_allegiance_desc:0 "Wage war to maintain control over our disloyal subjects."
  pledged_allegiance:0 "Pledged Allegiance"
  pledged_allegiance_desc:0 "Our current Overlord braved the fires of war to free us from our former masters."
