--- a/mod/thmod/localisation/english/paragon_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_l_english.yml
@@ -727,7 +727,7 @@
  councilor_corporate_anglers:0 "หัวหน้าเจ้าหน้าที่นาวิกโยธิน"
  councilor_corporate_anglers_female:0 "$councilor_corporate_anglers$"
  councilor_corporate_anglers_desc:1 "The $TITLE$ is responsible for seaborne productivity."
- councilor_corporate_anglers_custom_modifier_desc:0 "§Y+$@councilor_corporate_anglers_angler_trade_value_bonus$§! £trade_value£ from £job_angler£ §Y$job_angler_plural$§!\n§Y+$@councilor_corporate_anglers_pearl_diver_trade_value_bonus$§! £trade_value£ from £job_pearl_diver£ §Y$job_pearl_diver_plural$§!"
+ councilor_corporate_anglers_custom_modifier_desc:0 "§Y+$@councilor_corporate_anglers_angler_trade_value_bonus$§! £trade_value£ จาก £job_angler£ §Y$job_angler_plural$§!\n§Y+$@councilor_corporate_anglers_pearl_diver_trade_value_bonus$§! £trade_value£ จาก £job_pearl_diver£ §Y$job_pearl_diver_plural$§!"
  councilor_corporate_ascensionists:0 "หัวหน้าเจ้าหน้าที่งานการยกระดับ"
  councilor_corporate_ascensionists_female:0 "$councilor_corporate_ascensionists$"
  councilor_corporate_ascensionists_desc:0 "$councilor_ascensionists_desc$"
@@ -830,7 +830,7 @@
  councilor_indentured_assets:0 "เจ้าหน้าที่จัดสรรทรัพย์สิน"
  councilor_indentured_assets_female:0 "$councilor_indentured_assets$"
  councilor_indentured_assets_desc:1 "The $TITLE$ ensures efficiency in the trade of indentured assets."
- councilor_indentured_assets_custom_modifier_desc:0 "Enslaved pops generate £trade_value£$@councilor_indentured_assets_trade_value$"
+ councilor_indentured_assets_custom_modifier_desc:0 "ประชากรที่เป็นทาสจะสร้าง £trade_value£$@councilor_indentured_assets_trade_value$"
  councilor_inwards_perfection:0 "ผู้บัญชาการเฝ้าระวัง"
  councilor_inwards_perfection_female:0 "$councilor_inwards_perfection$"
  councilor_inwards_perfection_desc:1 "The $TITLE$ is in charge of the vigilant watch protecting our borders."
@@ -894,7 +894,7 @@
  councilor_reanimated_armies:0 "มาสเตอร์เนโครแมนเซอร์"
  councilor_reanimated_armies_female:0 "$councilor_reanimated_armies$"
  councilor_reanimated_armies_desc:0 "The $TITLE$ guards the secret arts and ordains new necromancers."
- councilor_reanimated_armies_custom_modifier_desc:1 "Each £job_necromancer£ §Y$job_necromancer$§! also produces §G$@councilor_reanimated_armies_necromancer_unity|1$§! £unity£"
+ councilor_reanimated_armies_custom_modifier_desc:1 "ในแต่ละ £job_necromancer£ §Y$job_necromancer$§! ยังผลิต §G$@councilor_reanimated_armies_necromancer_unity|1$§! £unity£"
  councilor_relentless_industrialists:0 "หัวหน้าเจ้าหน้าที่การสกัด"
  councilor_relentless_industrialists_female:0 "$councilor_relentless_industrialists$"
  councilor_relentless_industrialists_desc:1 "The $TITLE$ will exploit anyone and anything to ensure industrial expansion."
@@ -923,7 +923,7 @@
  councilor_trading_posts:0 "ผู้ประสานงานโลจิสติกส์การค้า"
  councilor_trading_posts_female:0 "$councilor_trading_posts$"
  councilor_trading_posts_desc:1 "The $TITLE$ is in charge of coordinating trade route scheduling to optimize capacity."
- councilor_trading_posts_custom_modifier_desc:1 "Each §H$sm_trading_hub$§! also produces §G0.5§! £trade_value£"
+ councilor_trading_posts_custom_modifier_desc:1 "ในแต่ละ §H$sm_trading_hub$§! ยังผลิต §G0.5§! £trade_value£"
  councilor_warrior_culture:0 "ผู้ตัดสินการดวล"
  councilor_warrior_culture_female:0 "$councilor_warrior_culture$"
  councilor_warrior_culture_desc:1 "The $TITLE$ is responsible for maintaining dueling etiquette, and overseeing the correct execution of warfare protocols."
